# python-tdd

./: .gitignore  Dockerfile  MANIFEST.in  README.md  doc.md  pydoc.md  pyproject.toml  requirements.txt
.github/workflows/: python-build.yml
docs/: booking_flow.html  cinema.html  helper.html
src/: booking_flow.py  cinema.py  helper.py
src/templates/: all.j2  map.j2  menu.j2
tests/: test_booking_end_to_end.py  test_booking_flow.py  test_cinema.py  test_cinema.pyx  test_helper.py
