[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "./src/"

[build-system]
requires = [
    "setuptools >= 75",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "cinema"
version = "0.0.1"
dependencies = [
    "jinja2"
]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = [ "./src" ]